# mlx-openai-tts

./: .gitignore  AGENTS.md  README.md  models.json  pyproject.toml
launchd/: com.local.mlx-openai-tts.plist
scripts/: install-launchagent.sh  run.sh  uninstall-launchagent.sh
src/mlx_openai_tts/: README.md  __init__.py  __main__.py  audio.py  auth.py  config.py  engine.py  registry.py  schemas.py  server.py
src/mlx_openai_tts/models/: README.md  __init__.py  base.py  chatterbox.py  kokoro.py
tests/: test_app.py  test_auth.py  test_chatterbox.py  test_registry.py
typings/: soundfile.pyi
typings/mlx_audio/tts/: utils.pyi
